# napari-workflow-optimizer

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
demo/: binary_image_optimizer.ipynb  gui.ipynb  intensity_image_optimizer.ipynb  label_image_optimizer.ipynb  sparse_label_image_optimizer.ipynb
src/napari_workflow_optimizer/: __init__.py  _optimizer.py
src/napari_workflow_optimizer/_tests/: test_dock_widget.py  test_optimizers.py  test_plotter.py  test_z_dock_widget.py
src/napari_workflow_optimizer/gui/: _dock_widget.py  _plotter.py
