[metadata]
name = napari-workflow-optimizer
version = 0.1.3
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-workflow-optimizer
license = BSD-3-Clause
description = Optimize image processing workflows in napari for segmentation quality
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-workflow-optimizer/issues
    Documentation = https://github.com/haesleinhuepf/napari-workflow-optimizer#README.md
    Source Code = https://github.com/haesleinhuepf/napari-workflow-optimizer
    User Support = https://github.com/haesleinhuepf/napari-workflow-optimizer/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    pyclesperanto_prototype
    scikit-learn
    napari-time-slicer
    matplotlib
    scipy
    napari-workflows

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-workflow-optimizer = napari_workflow_optimizer
